@@ -95,9 +95,9 @@ m4_define([REQUIRED_VERSION_MICRO], [m4_bregexp(REQUIRED_VERSION, [\([0-9]+\)\.\
 			SAVED_LDFLAGS=$LDFLAGS
 			SAVED_LIBS=$LIBS
 
-			CFLAGS+=" $LIBPNG_CFLAGS"
-			LDFLAGS+=" $LIBPNG_LDFLAGS"
-			LIBS+=" $LIBPNG_LIBS"
+			CFLAGS="$CFLAGS $LIBPNG_CFLAGS"
+			LDFLAGS="$LDFLAGS $LIBPNG_LDFLAGS"
+			LIBS="$LIBS $LIBPNG_LIBS"
 
 			AC_LINK_IFELSE([
 				AC_LANG_PROGRAM([[
